fix type tsoa (not finish)
